[package]
name = "rust-gpx-smoother"
version = "0.1.0"
edition = "2021"

[dependencies]
gpx = "0.9"
geo = "0.28"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
image = "0.24"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
