
[package]
name = "rust-gpx-smoother"
version = "0.1.0"
edition = "2021"

[dependencies]
gpx = "0.9"
geo = "0.28"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1